add: autenticador part 3
